created crimes_db and crimes schema

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -10,6 +10,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "conn = psycopg2.connect(dbname=\"dq\", user=\"dq\")\n",
+    "conn.autocommit = True\n",
+    "# creating crimes_db database\n",
+    "cur =  conn.cursor()\n",
+    "cur.execute('CREATE DATABASE crimes_db')\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(dbname=\"crimes_db\", user=\"dq\")\n",
+    "conn.autocommit = True\n",
+    "# creating crimes schema in crimes_db\n",
+    "cur =  conn.cursor()\n",
+    "cur.execute('CREATE SCHEMA crimes')\n",
+    "conn.autocommit = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -36,5 +66,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
