reading boston csv file

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -40,6 +40,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "# reading boston.csv file\n",
+    "with open('boston.csv', 'r') as f:\n",
+    "    rows = list(csv.reader(f))\n",
+    "    col_header = rows[0]\n",
+    "    first_row = rows[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['incident_number',\n",
+       "  'offense_code',\n",
+       "  'description',\n",
+       "  'date',\n",
+       "  'day_of_the_week',\n",
+       "  'lat',\n",
+       "  'long'],\n",
+       " ['1',\n",
+       "  '619',\n",
+       "  'LARCENY ALL OTHERS',\n",
+       "  '2018-09-02',\n",
+       "  'Sunday',\n",
+       "  '42.35779134',\n",
+       "  '-71.13937053'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_header, first_row"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
