analyzing column values

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -87,6 +87,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_col_value_set(csv_filename, col_index):\n",
+    "    '''\n",
+    "    args: \n",
+    "    csv_filename- name of a CSV file\n",
+    "    col_index- index of a column of that CSV file\n",
+    "    \n",
+    "    returns:\n",
+    "    a Python set that contains all distinct values from that column\n",
+    "    '''\n",
+    "    col_set = set()\n",
+    "    with open(csv_filename, 'r') as f:\n",
+    "        rows = list(csv.reader(f))\n",
+    "        for row in rows[1:]:\n",
+    "            col_set.add(row[col_index])\n",
+    "    return col_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "incident_number 298329\n",
+      "offense_code 219\n",
+      "description 239\n",
+      "date 1177\n",
+      "day_of_the_week 7\n",
+      "lat 18177\n",
+      "long 18177\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculating no of values in a column\n",
+    "for i in range(len(col_header)):\n",
+    "    values = get_col_value_set('boston.csv', i)\n",
+    "    print(col_header[i], len(values))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
