--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -20,6 +20,7 @@
     "conn.autocommit = True\n",
     "# creating crimes_db database\n",
     "cur =  conn.cursor()\n",
+    "cur.execute('DROP DATABASE IF EXISTS crimes_db')\n",
     "cur.execute('CREATE DATABASE crimes_db')\n",
     "conn.close()"
    ]
@@ -34,6 +35,7 @@
     "conn.autocommit = True\n",
     "# creating crimes schema in crimes_db\n",
     "cur =  conn.cursor()\n",
+    "cur.execute('DROP SCHEMA IF EXISTS crimes')\n",
     "cur.execute('CREATE SCHEMA crimes')\n",
     "conn.autocommit = False"
    ]
@@ -89,6 +91,27 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298329"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of rows of data in CSV file\n",
+    "len(rows[1:]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_col_value_set(csv_filename, col_index):\n",
@@ -110,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +155,27 @@
     "for i in range(len(col_header)):\n",
     "    values = get_col_value_set('boston.csv', i)\n",
     "    print(col_header[i], len(values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum length of a value in description col: 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finding longest value length in a description column\n",
+    "max_len = 0\n",
+    "for value in get_col_value_set('boston.csv', 2):\n",
+    "    max_len = max(max_len, len(value))\n",
+    "print('maximum length of a value in description col:', max_len)"
    ]
   },
   {
