--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maximum length of a value in description col: 58\n"
+      "maximum length of a value in description column: 58\n"
      ]
     }
    ],
@@ -175,7 +175,50 @@
     "max_len = 0\n",
     "for value in get_col_value_set('boston.csv', 2):\n",
     "    max_len = max(max_len, len(value))\n",
-    "print('maximum length of a value in description col:', max_len)"
+    "print('maximum length of a value in description column:', max_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['incident_number', 'offense_code', 'description', 'date', 'day_of_the_week', 'lat', 'long']\n",
+      "['1', '619', 'LARCENY ALL OTHERS', '2018-09-02', 'Sunday', '42.35779134', '-71.13937053']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(col_header)\n",
+    "print(first_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating the enumerated datatype for representing the weekday\n",
+    "cur.execute('''\n",
+    "    CREATE TYPE day_of_week_enum AS ENUM(\n",
+    "        'Sunday', 'Monday', 'Tuesday', 'Wednesday', \n",
+    "        'Thursday', 'Friday', 'Saturday' )''')\n",
+    "\n",
+    "# creating boston_crimes table in crimes schema\n",
+    "cur.execute(''' \n",
+    "    CREATE TABLE crimes.boston_crimes(\n",
+    "                incident_number INTEGER PRIMARY KEY,\n",
+    "                offense_code INTEGER,\n",
+    "                description VARCHAR(100),\n",
+    "                date DATE,\n",
+    "                day_of_the_week day_of_week_enum,\n",
+    "                lat DECIMAL,\n",
+    "                long DECIMAL)''')"
    ]
   },
   {
@@ -202,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
