revoking public privileges

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -218,7 +218,31 @@
     "                date DATE,\n",
     "                day_of_the_week day_of_week_enum,\n",
     "                lat DECIMAL,\n",
-    "                long DECIMAL)''')"
+    "                long DECIMAL)''')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading boston.csv data into boston_crimes table\n",
+    "with open('boston.csv', 'r') as f:\n",
+    "    cur.copy_expert(\"COPY crimes.boston_crimes FROM STDIN WITH CSV HEADER;\", f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# revoking public privileges\n",
+    "cur.execute(\"REVOKE ALL ON SCHEMA public FROM public\")\n",
+    "cur.execute(\"REVOKE ALL ON DATABASE crimes_db FROM public\")\n",
+    "conn.commit()"
    ]
   },
   {
