created readonly and readwrite groups with privileges

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -20,8 +20,8 @@
     "conn.autocommit = True\n",
     "# creating crimes_db database\n",
     "cur =  conn.cursor()\n",
-    "cur.execute('DROP DATABASE IF EXISTS crimes_db')\n",
-    "cur.execute('CREATE DATABASE crimes_db')\n",
+    "cur.execute('DROP DATABASE IF EXISTS crimes_db;')\n",
+    "cur.execute('CREATE DATABASE crimes_db;')\n",
     "conn.close()"
    ]
   },
@@ -35,9 +35,9 @@
     "conn.autocommit = True\n",
     "# creating crimes schema in crimes_db\n",
     "cur =  conn.cursor()\n",
-    "cur.execute('DROP SCHEMA IF EXISTS crimes')\n",
-    "cur.execute('CREATE SCHEMA crimes')\n",
-    "conn.autocommit = False"
+    "cur.execute('DROP SCHEMA IF EXISTS crimes;')\n",
+    "cur.execute('CREATE SCHEMA crimes;')\n",
+    "#conn.autocommit = False"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "cur.execute('''\n",
     "    CREATE TYPE day_of_week_enum AS ENUM(\n",
     "        'Sunday', 'Monday', 'Tuesday', 'Wednesday', \n",
-    "        'Thursday', 'Friday', 'Saturday' )''')\n",
+    "        'Thursday', 'Friday', 'Saturday' );''')\n",
     "\n",
     "# creating boston_crimes table in crimes schema\n",
     "cur.execute(''' \n",
@@ -218,8 +218,7 @@
     "                date DATE,\n",
     "                day_of_the_week day_of_week_enum,\n",
     "                lat DECIMAL,\n",
-    "                long DECIMAL)''')\n",
-    "conn.commit()"
+    "                long DECIMAL);''')\n"
    ]
   },
   {
@@ -240,9 +239,34 @@
    "outputs": [],
    "source": [
     "# revoking public privileges\n",
-    "cur.execute(\"REVOKE ALL ON SCHEMA public FROM public\")\n",
-    "cur.execute(\"REVOKE ALL ON DATABASE crimes_db FROM public\")\n",
-    "conn.commit()"
+    "cur.execute(\"REVOKE ALL ON SCHEMA public FROM public;\")\n",
+    "cur.execute(\"REVOKE ALL ON DATABASE crimes_db FROM public;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating readonly and granting necessary accesses\n",
+    "cur.execute(\"CREATE GROUP readonly NOLOGIN;\")\n",
+    "cur.execute(\"GRANT CONNECT ON DATABASE crimes_db TO readonly;\")\n",
+    "cur.execute(\"GRANT USAGE ON SCHEMA crimeS TO readonly;\")\n",
+    "cur.execute(\"GRANT SELECT ON ALL TABLES IN SCHEMA crimes TO readonly;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating readwrite and granting necessary accesses\n",
+    "cur.execute(\"CREATE GROUP readwrite NOLOGIN;\")\n",
+    "cur.execute(\"GRANT CONNECT ON DATABASE crimes_db TO readwrite;\")\n",
+    "cur.execute(\"GRANT USAGE ON SCHEMA crimeS TO readwrite;\")\n",
+    "cur.execute(\"GRANT SELECT, INSERT, DELETE, UPDATE ON ALL TABLES IN SCHEMA crimes TO readwrite;\")"
    ]
   },
   {
