created data_analyst and data_scientist users and assinged them to thier groups

--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -271,6 +271,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating data_analyst user and assinging to readonly group\n",
+    "cur.execute(\"CREATE USER data_analyst WITH PASSWORD 'secret1';\")\n",
+    "cur.execute(\"GRANT readonly TO data_analyst;\")\n",
+    "\n",
+    "# creating data_scientist user and assinging to readwrite group\n",
+    "cur.execute(\"CREATE USER data_scientist WITH PASSWORD 'secret2';\")\n",
+    "cur.execute(\"GRANT readwrite TO data_scientist;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
