--- a/database_for_crime_reports.ipynb
+++ b/database_for_crime_reports.ipynb
@@ -20,7 +20,6 @@
     "conn.autocommit = True\n",
     "# creating crimes_db database\n",
     "cur =  conn.cursor()\n",
-    "cur.execute('DROP DATABASE IF EXISTS crimes_db;')\n",
     "cur.execute('CREATE DATABASE crimes_db;')\n",
     "conn.close()"
    ]
@@ -35,7 +34,6 @@
     "conn.autocommit = True\n",
     "# creating crimes schema in crimes_db\n",
     "cur =  conn.cursor()\n",
-    "cur.execute('DROP SCHEMA IF EXISTS crimes;')\n",
     "cur.execute('CREATE SCHEMA crimes;')\n",
     "#conn.autocommit = False"
    ]
@@ -245,33 +243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating readonly and granting necessary accesses\n",
     "cur.execute(\"CREATE GROUP readonly NOLOGIN;\")\n",
     "cur.execute(\"GRANT CONNECT ON DATABASE crimes_db TO readonly;\")\n",
-    "cur.execute(\"GRANT USAGE ON SCHEMA crimeS TO readonly;\")\n",
+    "cur.execute(\"GRANT USAGE ON SCHEMA crimes TO readonly;\")\n",
     "cur.execute(\"GRANT SELECT ON ALL TABLES IN SCHEMA crimes TO readonly;\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating readwrite and granting necessary accesses\n",
     "cur.execute(\"CREATE GROUP readwrite NOLOGIN;\")\n",
     "cur.execute(\"GRANT CONNECT ON DATABASE crimes_db TO readwrite;\")\n",
-    "cur.execute(\"GRANT USAGE ON SCHEMA crimeS TO readwrite;\")\n",
+    "cur.execute(\"GRANT USAGE ON SCHEMA crimes TO readwrite;\")\n",
     "cur.execute(\"GRANT SELECT, INSERT, DELETE, UPDATE ON ALL TABLES IN SCHEMA crimes TO readwrite;\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +280,63 @@
     "# creating data_scientist user and assinging to readwrite group\n",
     "cur.execute(\"CREATE USER data_scientist WITH PASSWORD 'secret2';\")\n",
     "cur.execute(\"GRANT readwrite TO data_scientist;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close the old connection to test with a brand new connection\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('readonly', True, False, False, False, False)\n",
+      "('readwrite', True, False, False, False, False)\n",
+      "('data_analyst', True, False, False, False, True)\n",
+      "('data_scientist', True, False, False, False, True)\n",
+      "\n",
+      "('readonly', 'SELECT', 'crimes', 'boston_crimes')\n",
+      "('readwrite', 'INSERT', 'crimes', 'boston_crimes')\n",
+      "('readwrite', 'SELECT', 'crimes', 'boston_crimes')\n",
+      "('readwrite', 'UPDATE', 'crimes', 'boston_crimes')\n",
+      "('readwrite', 'DELETE', 'crimes', 'boston_crimes')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing that everything is configured as expected\n",
+    "conn = psycopg2.connect('dbname=crimes_db user=dq')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# check users and groups\n",
+    "cur.execute('''\n",
+    "    SELECT rolname, rolinherit, rolsuper, rolcreaterole, rolcreatedb, rolcanlogin\n",
+    "    FROM pg_roles\n",
+    "    WHERE rolname in ('readonly', 'readwrite', 'data_analyst', 'data_scientist');''')\n",
+    "for user in cur:\n",
+    "    print(user)\n",
+    "print()\n",
+    "# check privileges\n",
+    "cur.execute('''\n",
+    "    SELECT grantee, privilege_type, table_schema, table_name\n",
+    "    FROM information_schema.table_privileges\n",
+    "    WHERE grantee in ('readonly', 'readwrite');''')\n",
+    "for grantee in cur:\n",
+    "    print(grantee)\n",
+    "    \n",
+    "conn.commit()\n",
+    "conn.close()\n"
    ]
   },
   {
@@ -308,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
